--- a/style.css
+++ b/style.css
@@ -80,6 +80,12 @@ option {
 a {
     color: white;
     text-decoration: underline;
+    transition: all 200ms;
+}
+
+a:hover {
+    background-color: rgba(0, 0, 0, 0.2);
+    transition: all 300ms;
 }
 
 img {
@@ -126,7 +132,8 @@ nav {
 
 .section {
     color: var(--text);
-    width: 90%;
+    width: 90vw;
+    min-height: 100vh;
     background-color: white;
     border-radius: 1em 1em 0 0;
     padding: 4em 2em;
@@ -137,8 +144,21 @@ nav {
 
 .profileboxcontainer {
     width: 100%;
+    padding-right: 10vw;
+    margin: 4em 0;
+    box-sizing: border-box;
+    position: absolute;
     display: flex;
     justify-content: end;
+}
+
+.document {
+    padding-right: 360px;
+    margin-top: 2em;
+}
+
+.document > p {
+    text-indent: 1em;
 }
 
 /* 
@@ -146,3 +166,9 @@ nav {
     > styles that belongs to 'Home'.
 */
 
+#home > .document > h2 {
+    border-bottom: 2px solid var(--primary);
+    border-radius: 16px;
+    padding: 4px 16px;
+    margin: 0;
+}
