--- a/assets/profilebox.css
+++ b/assets/profilebox.css
@@ -2,12 +2,13 @@
     width: 328px;
     border-radius: 12px;
     box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2);
+    margin-right: 4em;
     overflow: hidden;
 }
 
 .profilebox > div {
     border-top: 2px solid var(--primary);
-    padding: 0 12px 8px;
+    padding: 0 12px 12px;
     margin: 0;
 }
 
